# legend-ai-v_0.1

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: settings.py  tool.yaml
controller/route/: app.py
controller/schemas/: request_models.py  response_models.py
middleware/: auth.py  error_handler.py  logging_middleware.py  rate_limiter.py
monitoring/: logger.py  metrics_collector.py
notebook/: aws-test.ipynb
tests/: conftest.py  test_api.py  test_validators.py
utils/: helper.py  retry_handler.py  validators.py
workflow/: bot.py  pipecat_flow.py  prompt.py
